# ropebench

./: .gitignore  CLAIMS.md  LICENSE  README.md  ROADMAP.md  THEORY.md  pyproject.toml
.github/workflows/: ci.yml
research/: JOURNAL.md  email_report.py  exp_t7_distractors.py
research/reports/: 01-kickoff.md  02-theories.md  03-tighter-and-t8.md
results/bigrun-20seed/: result.json
results/frontier-haiku/: report.md
results/frontier-opus/: report.md
results/frontier-sonnet/: report.md
results/live-haiku-full/: report.md  results.csv
results/live-haiku-smoke/: report.md  results.csv
ropebench/: __init__.py  cli.py  convert.py  models.py  pricing.py  regimes.py  report.py  runner.py  scenario.py  stats.py  transcript.py
tests/: conftest.py  test_caching.py  test_e2e.py  test_frontdoor.py  test_models.py  test_pricing.py  test_regimes.py  test_scenario.py  test_stats.py  test_stats_calibration.py  test_theory_t1.py  test_theory_t2.py  test_theory_t3.py  test_theory_t4.py  test_theory_t7.py  test_theory_t8.py  test_transcript.py
