[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ropebench"
version = "0.1.0"
description = "Effectiveness benchmark for LLM context-handoff strategies (Jumping Rope vs full-history / truncation / summary baselines)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "jumping-rope @ git+https://github.com/AlphaSaleAidan/jumping-rope.git@feat/v1.1-streaming-unbounded",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
ropebench = "ropebench.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ropebench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
